Scrollbar fix

--- a/css/impact-report-archive.css
+++ b/css/impact-report-archive.css
@@ -118,8 +118,6 @@ article:hover .article-summary {
 	border-style: solid;
 	border-width: 1px;
 	margin-bottom: 7px;
-	max-height: 150px;
-	overflow: scroll;
 	padding: 0;
 }
 .browse-terms.topics li a {
